--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.9"
 
 services:
   tool-suite:
-    build: .
+    build:
+      context: .
     container_name: tool-suite
     restart: unless-stopped
     ports:
